# mac-pdfium

./: .gitignore  BUILD.gn  build_mac.sh
platform/mac/: App.mm  BUILD.gn  Info.plist  pdfium_object_info.h
platform/shared/: BUILD.gn  advanced_object_mapper.cpp  pdf_utils.cpp  pdf_utils.h  pdfium_internal_access.cpp  pdfium_object_info.cpp  pdfium_object_info.h
tools/mac/: build_mac_app.py
